# SentAlign

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  sentAlign.py
SentAlign/: align_anchors.py  repeatedTimer.py
evaluation/: evaluate.py
src/SentAlign/: __init__.py  file_read_back.pyx  files2align.py  galechurch.pyx  reportInfo.py  sentAlign.py
