[build-system]
requires = ["setuptools~=69.1.1", "cython>=3"]


[project]
name = "SentAlign"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "you@yourdomain.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy>=1.22.1",
    "transformers>=4.22.2"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
myModule = ["*.pyx"]
